# GOIT_web_hw_11

./: crud.py  main.py  models.py  pyproject.toml  schemas.py  sql_app.sqlite
